istio-teaching/gateway/protocol/web-grpc/gateway-grpc-web.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: grpc-web
      protocol: GRPC-WEB
      targetPort: 80
    hosts:
    - "*"
